<resources>
    <string name="app_name" translatable="false">ShipSmart</string>
    <string name="reg_label_1">Вход</string>
    <string name="reg_label_2">Регистрация</string>

    <string name="regButton_1">Войти</string>
    <string name="regButton_2">Зарегистрироваться</string>

    <string name="login_label" translatable="false">Email:</string>
    <string name="login_text">Ваш email</string>
    <string name="password_label" translatable="false">Password:</string>
    <string name="password_text" translatable="false">********</string>

    <!--Package Params-->
    <string name="baseCityFrom_title">Откуда</string>
    <string name="baseCity_from">Нижний Новгород</string>

    <string name="baseCityWhere_title">Куда</string>
    <string name="baseCity_where">Москва</string>

    <string name="lengthTitle">Длинна, см</string>
    <string name="lengthValue">105</string>

    <string name="weightTitle">Ширина, см</string>
    <string name="weightValue">20</string>

    <string name="heightTitle">Высота, см</string>
    <string name="heightValue">30</string>

    <string name="continueButton">Рассчитать</string>

    <!--    -->
    <string name="login_underButton_text">
        <u>У меня еше нет аккаунта</u>
    </string>
    <string name="signup_underButton_text">
        <u>Уже есть аккаунт</u>
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>