<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="309dp"
            android:layout_height="125dp"
            android:layout_marginTop="@dimen/title_margin_top"
            android:layout_marginBottom="@dimen/title_margin_bottom"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/jomhuria"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/orange"
            android:textSize="80sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginBottom="@dimen/reg_label_1_margin_bottom"
                android:gravity="center"
                android:text="@string/reg_label_2"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/registration_margin_left"
                    android:layout_marginRight="@dimen/registration_margin_middle"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/login_label" />

                <EditText
                    android:id="@+id/EmailAddress"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/registration_margin_right"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/login_text"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="@dimen/registration_margin_left"
                    android:layout_marginRight="@dimen/registration_margin_middle"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/password_label" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/registration_margin_right"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/reg_button_margin_top"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/signup_button"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/regButton_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/open_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup_underButton_text"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>